--- a/calorie_counter_app/package.json
+++ b/calorie_counter_app/package.json
@@ -8,9 +8,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^9.17.2",
+    "firebase-app": "^0.0.1",
+    "firebase-auth": "^0.1.2",
     "router": "^1.3.8",
     "vue": "^3.2.47",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
