--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase-app": "^0.0.1",
     "firebase-auth": "^0.1.2",
     "fullcalendar": "^6.1.5",
+    "papaparse": "^5.4.1",
     "router": "^1.3.8",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6",
